--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
+<html>
+    <head>
+        <title> :: Flex Academia :: </title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
+    <body>
+        <header class="container">
+           
+            <section>
+                <nav class="hamburguer">
+                    <button>
+                        <spam></spam>
+                        <spam></spam>
+                        <spam></spam>
+                    </button>
+                </nav>
+
+                <a id="logo" href="https://google.com.br" target="_blank">
+                    <img class="responsive" src="logo-flex-academia.png" alt="Logo Flex Academia">
+                </a>
+
+                <nav class="tools">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Horários</a></li>
+                        <li><a href="">Planos</a></li>
+                        <li><a href="">Área do Aluno</a></li>
+                    </ul>
+                </nav>
+
+            </section>
+
+            <section class="stories">
+                <ul>
+                    <li>
+                        <figure>
+                            <img class="responsive" src="mulheres-na-academia.jpg" alt="Stories Flex"/>
+                            <figcaption>
+                                Stories Flex
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <figure>
+                            <img class="responsive" src="mulheres-na-academia.jpg" alt="Stories Flex"/>
+                            <figcaption>
+                                Stories Flex
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <figure>
+                            <img class="responsive" src="mulheres-na-academia.jpg" alt="Stories Flex"/>
+                            <figcaption>
+                                Stories Flex
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <figure>
+                            <img class="responsive" src="mulheres-na-academia.jpg" alt="Stories Flex"/>
+                            <figcaption>
+                                Stories Flex
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <figure>
+                            <img class="responsive" src="mulheres-na-academia.jpg" alt="Stories Flex"/>
+                            <figcaption>
+                                Stories Flex
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <figure>
+                            <img class="responsive" src="mulheres-na-academia.jpg" alt="Stories Flex"/>
+                            <figcaption>
+                                Stories Flex
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <figure>
+                            <img class="responsive" src="mulheres-na-academia.jpg" alt="Stories Flex"/>
+                            <figcaption>
+                                Stories Flex
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <figure>
+                            <img class="responsive" src="mulheres-na-academia.jpg" alt="Stories Flex"/>
+                            <figcaption>
+                                Stories Flex
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+
+
+
+            </section>
+
+        </header>
+
+        <main>
+
+        </main>
+
+        <footer>
+
+        </footer>
+    </body>
+</html>
